# EdgeMind

./: .gitignore  Info.txt  README.md  pyproject.toml
dashboard/: app.py
data/eval/: custom_eval_set.json  wikitext2_subset.txt
edgemind/benchmarks/: __init__.py  groq_comparison.py  inference_speed.py  memory_profiler.py  perplexity.py  quality_eval.py  runner.py
edgemind/cli/: __init__.py  main.py
edgemind/core/: __init__.py  config.py  gpu_utils.py  logging.py  model_loader.py
edgemind/deployment/: __init__.py  ollama_deployer.py  onnx_exporter.py
edgemind/deployment/profiles/: __init__.py  base_profile.py  jetson_nano.py  jetson_orin.py  mac_m1.py  mac_m2.py  mac_m3_pro.py  raspberry_pi5.py  rtx_4090.py  rtx_5090.py
edgemind/llm/: __init__.py  groq_client.py  mistral_client.py
edgemind/models/: __init__.py  benchmark_models.py
edgemind/quantization/: awq_quant.py  base.py  bitsandbytes_quant.py  gguf_converter.py
sample_results/: README.md
sample_results/phi4-mini/: bf16_benchmark.json  int4_nf4_benchmark.json  summary.json
sample_results/qwen2.5-7b/: bf16_benchmark.json  gguf_q4km_benchmark.json  gptq4_benchmark.json  int4_nf4_benchmark.json  int8_benchmark.json  summary.json
scripts/: setup_cpu_only.sh  setup_rtx5090.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_benchmark_runner.py
tests/unit/: __init__.py  test_benchmark_serialization.py  test_gpu_utils.py  test_perplexity.py  test_quality_scorer.py
