[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgemind"
version = "1.0.0"
description = "LLM quantization, benchmarking, and edge deployment toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["llm", "quantization", "edge-ai", "benchmarking", "gguf", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # CLI
    "typer[all]>=0.12",
    "rich>=13.7",
    # ML
    "transformers>=4.44",
    "accelerate>=0.32",
    "bitsandbytes>=0.43",
    "datasets>=2.20",
    "optimum>=1.21",
    # NOTE: torch is NOT listed here intentionally.
    # The RTX 5090 (sm_120 Blackwell) requires PyTorch nightly with CUDA 13.
    # Standard 'pip install torch' does NOT support sm_120 and will fail silently.
    # Install separately using one of:
    #   RTX 5090:   scripts/setup_rtx5090.sh
    #   CPU only:   scripts/setup_cpu_only.sh
    #   Other GPU:  pip install torch --index-url https://download.pytorch.org/whl/cu121
    # See README.md Setup section for full instructions.
    # Config + API
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    "groq>=0.9",
    "mistralai>=1.0",
    # Benchmarks
    "psutil>=5.9",
    "tqdm>=4.66",
    "numpy>=1.26",
    # Dashboard
    "streamlit>=1.35",
    "plotly>=5.22",
    "pandas>=2.0",
    # Utilities
    "python-dotenv>=1.0",
    "huggingface-hub>=0.23",
]

[project.optional-dependencies]
gpu = [
    # Install manually for your GPU — see README Setup section
    # "auto-gptq>=0.7",   # GPTQ quantization
    # "autoawq>=0.2",     # AWQ quantization
    # "llama-cpp-python>=0.2",  # GGUF inference
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
edgemind = "edgemind.cli.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/edgemind"
Repository = "https://github.com/yourusername/edgemind"

[tool.hatch.build.targets.wheel]
packages = ["edgemind"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501", "N999"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=edgemind --cov-report=term-missing -v"
markers = [
    "gpu: mark test as requiring GPU",
    "slow: mark test as slow (long-running quantization)",
]

[tool.coverage.run]
source = ["edgemind"]
omit = ["tests/*", "dashboard/*"]
